--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
+    "redux-promise": "^0.6.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
