--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
+    "redux-form": "^7.4.2",
     "redux-promise": "^0.6.0",
     "reselect": "^4.0.0"
   },
